--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,6 +35,7 @@ dependencies = [
     "django-simple-history>=3.8.0",
     "django-split-settings>=1.3.2",
     "django-su>=1.0.0",
+    "django-tailwind>=3.6.0",
     "djangorestframework>=3.16.0",
     "doi2bib>=0.4.0",
     "fontawesome-free>=5.15.4",
@@ -79,7 +80,9 @@ pg = [
 
 [dependency-groups]
 dev = [
+    "cookiecutter>=2.1.1",
     "django-sslserver>=0.22",
+    "django-tailwind[reload]>=3.6.0",
     "factory-boy>=3.3.3",
     "faker>=37.1.0",
     "pytest-django>=4.11.1",
